Fixes 2px layout shift on toggle canvas lock

--- a/frontend/src/features/tabs/UnifiedCanvas/CanvasWorkarea.scss
+++ b/frontend/src/features/tabs/UnifiedCanvas/CanvasWorkarea.scss
@@ -72,7 +72,7 @@
     .inpainting-canvas-stage {
       outline: none;
       border-radius: 0.5rem;
-      border: 1px solid var(--border-color-light);
+      box-shadow: 0px 0px 0px 1px var(--border-color-light);
       overflow: hidden;
 
       canvas {
